vlib/v/checker/tests/asm_alias_does_not_exist.vv
asm amd64 {
	mov ebx, a
}
